Use legacy contact phone from old site

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-const phone = "484-706-9229"; // TODO: confirm
+const phone = "484-706-9229";
 const phoneTel = "+1" + phone.replace(/[^0-9]/g, "");
 ---
 
